--- a/app/views/form.erb
+++ b/app/views/form.erb
@@ -1,11 +1,8 @@
-<div class="row">
-  <p>Pythagoras and other philosophers of the time believed that because mathematical concepts were more "practical" (easier to regulate and classify) than physical ones, they had greater actuality. St. Augustine of Hippo (A.D. 354–430) wrote "Numbers are the Universal language offered by the deity to humans as confirmation of the truth." Similar to Pythagoras, he too believed that everything had numerical relationships and it was up to the mind to seek and investigate the secrets of these relationships or have them revealed by divine grace. - Wikipedia</p>
+<% if !@error.nil? %>
+  <p><%= @error %></p>
+<% end %>
 <form action="/" method="post">
-  <div class="form-group">
-    <label for="birthdate">Enter your birthdate, bro</label>
-    <input class="form-control" name="birthdate" type="text"/>
-    <p><%= @error %></p>
-  </div>
-    <input class="btn btn-default" type="submit"/>
+  <label for="birthdate">Enter your birthdate</label>
+  <input type="date" name="birthdate" />
+  <input type="submit" />
 </form>
-</div>
