--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,26 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>Numerology App</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <style>
-  body {font-family: Arial;}
-  body {text-align: center;}
-  body {font-size: 24px;}
-  body {background: green;}
-  </style>
 </head>
-<body>
-<div class="container">
-<div class="header'>">
-<h1>Numerology Calculator <small>A Skillcrush Project</small></h1>
-</div>
-
-<hr />
-  
-<%= yield%>
-
-</div>
-
-</body>
+  <body>
+    <%= yield %>
+  </body>
 </html>
