--- a/app/views/people/index.erb
+++ b/app/views/people/index.erb
@@ -1,6 +1,21 @@
 <h1>People</h1>
-<ul>
+<table>
+  <thead>
+    <th>Name</th>
+    <th>Birthdate</th>
+  </thead>
+  <tbody>
   <% @people.each do |person| %>
-    <li><%= "#{person.first_name} #{person.last_name} - #{person.birthdate}"%></li>
+    <tr>
+      <td>
+        <a href="<%= "/people/#{person.id}" %>">
+          <%= "#{person.first_name} #{person.last_name}"%>
+        </a>
+      </td>
+      <td>
+        <% "#{person.birthdate}" %>
+      </td>
+    </tr>
   <% end %>
-</ul>
+  </tbody>
+</table>
