--- a/app/views/people/new.erb
+++ b/app/views/people/new.erb
@@ -1,4 +1,4 @@
-<form>
+<form action="/people" method="post">
   <label for="first_name">First Name:</label>
   <input type="text" name="first_name" />
 
@@ -6,7 +6,7 @@
   <input type="text" name="last_name" />
 
   <label for="birthdate">Birthdate:</label>
-  <input name="birthdate" type="date" />
+  <input name="birthdate" type="text" />
 
   <input type="submit" />
 </form>
