--- a/app/views/people/index.erb
+++ b/app/views/people/index.erb
@@ -9,11 +9,14 @@
     <tr>
       <td>
         <a href="<%= "/people/#{person.id}" %>">
-          <%= "#{person.first_name} #{person.last_name}"%>
+          <%= "#{person.first_name} #{person.last_name}" %>
         </a>
       </td>
       <td>
         <% "#{person.birthdate}" %>
+      </td>
+      <td>
+        <a href="<%= "/people/#{person.id}/edit" %>"> Edit </a>
       </td>
     </tr>
   <% end %>
