--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Numerology App</title>
+  <link rel="stylesheet" href="/css/people.css">  
 </head>
   <body>
     <%= yield %>
